Update: fixes to layout overflow index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -78,11 +78,11 @@ main {
 }
 
 #about-text-container {
-    height: 100%;
+    height: 90%;
     width: 90%;
     color: white;
     flex-direction: column;
-    font-size: calc(1.5vh + 1vw);
+    font-size: calc(1.25vh + 1vw);
 }
 
 #about-text-container > p {
@@ -179,4 +179,32 @@ main {
         width: 60%;
     }
 
+    .content {
+        width: 60%;
+    }
+
+    #about-text-container {
+        font-size: calc(1vh + .75vw);
+    }
+
+    #about-text-container > p {
+        margin: 0;
+    }
+
+    #about-text-container > img {
+        margin-right: 2%;
+        margin-bottom: 2%;
+    }
+
+    #email-link {
+        font-size: calc(0.5vh + 1vw);
+    }
+
+    .tab {
+        font-size: calc(1vh + 0.5vw);
+    }
+
+    #project-container {
+        width: 95%;
+    }
 }
